<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/InputFieldStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/route_number">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etRouteNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/InputFieldStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/route_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etRouteName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/InputFieldStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/start_point">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etStartPoint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/InputFieldStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/end_point">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEndPoint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>
